@@ -7,6 +7,7 @@ language: c
 
 sudo: required
 
+# switch to Ubuntu 14.04 aka the newest one possible (while 16.04 is out...)
 dist: trusty
 
 env:
@@ -19,16 +20,12 @@ before_install:
   - curl -OL http://raw.github.com/eddelbuettel/r-travis/master/scripts/travis-tool.sh
   - chmod 755 ./travis-tool.sh
   - ./travis-tool.sh bootstrap
+  # add our launchpad repo which has (inter alia) the newest QuantLib
   - sudo add-apt-repository -y ppa:edd/misc
   - sudo apt-get update -q
 
 install:
   - ./travis-tool.sh install_aptget r-cran-rcpp libquantlib0-dev r-cran-runit r-cran-rgl r-cran-zoo libboost-dev libboost-test-dev littler r-cran-shiny
-  #- ./travis-tool.sh install_r shiny
-  # get two locally built packages / backports of current QuantLib
-  #- ./travis-tool.sh install_dpkgcurl http://dirk.eddelbuettel.com/code/ubuntu/12.04/amd64/libquantlib0.deb 
-  #- ./travis-tool.sh install_dpkgcurl http://dirk.eddelbuettel.com/code/ubuntu/12.04/amd64/libquantlib0-dev.deb
-  #- ./travis-tool.sh install_dpkgcurl http://dirk.eddelbuettel.com/code/ubuntu/12.04/amd64/r-cran-rcpp.deb
 
 script: 
   - travis_wait ./travis-tool.sh run_tests
